- fixed wrong position of airports with runways missing end lat/lon - last map position/zoom now stored and retrieved in cookie - some nicer styling - improved ui for routes - started work on waypoint adding - added a shell script to compile the css

--- a/public/stylesheets/lib.less
+++ b/public/stylesheets/lib.less
@@ -7,6 +7,14 @@
     background-image: -o-linear-gradient(top, @c_top @p_top, @c_bottom @p_bottom);
 }
 
+.v-gradient_center (@c_top,@p_top,@c_center, @p_bottom, @c_bottom) {
+    background-image: linear-gradient(top, @c_top 0%, @c_center @p_top, @c_center @p_bottom, @c_bottom 100%);
+    background-image: -webkit-linear-gradient(top, @c_top 0%, @c_center @p_top, @c_center @p_bottom, @c_bottom 100%);
+    background-image: -moz-linear-gradient(top, @c_top 0%, @c_center @p_top, @c_center @p_bottom, @c_bottom 100%);
+    background-image: -ms-linear-gradient(top, @c_top 0%, @c_center @p_top, @c_center @p_bottom, @c_bottom 100%);
+    background-image: -o-linear-gradient(top, @c_top 0%, @c_center @p_top, @c_center @p_bottom, @c_bottom 100%);
+}
+
 .h-gradient (@c_left,@p_left,@c_right,@p_right) {
     background-image: linear-gradient(left, @c_left @p_left, @c_right @p_right);
     background-image: -webkit-linear-gradient(left, @c_left @p_left, @c_right @p_right);
@@ -45,6 +53,13 @@
     -moz-text-shadow: @value;
     -ms-text-shadow: @value;
     -o-text-shadow: @value;
+}
+.text-shadow_2x (@value_1,@value_2) {
+    text-shadow: @value_1,@value_2;
+    -webkit-text-shadow: @value_1,@value_2;
+    -moz-text-shadow: @value_1,@value_2;
+    -ms-text-shadow: @value_1,@value_2;
+    -o-text-shadow: @value_1,@value_2;
 }
 
 .transition (@value) {
