--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -2,7 +2,7 @@
 
 @header_height: 3em;
 @footer_height: 2em;
-@menu_width: 20em;
+@menu_width: 25em;
 
 html {
   width:100%;
@@ -10,11 +10,23 @@ html {
 }
 
 body {
+  font-family:sans-serif;
   width: 100%;
   height: 100%;
   margin:0;
   padding:0;
   font-size:12px;
+}
+input,select,button,textarea {
+  font-family:sans-serif;
+  font-size:100%;
+}
+input[type=text] {
+  .border-radius(3px);
+  border:1px solid #333;
+  background-color:#FFF;
+  .v-gradient(#DDD,0%,#FFF,80%);
+  padding:0.2em 0.5em;
 }
 
 #header {
@@ -22,18 +34,49 @@ body {
   top:0;
   left:0;
   right:0;
-  height:@header_height;
+  height:@header_height - 1em;
   background: #CCC;
   z-index:1000;
-
+  .box-shadow(0 0 10px rgba(0,0,0,0.25));
+  padding:0.5em;
+  .v-gradient(#AAA,0%,#666,100%);
+  color:#FFF;
+  .text-shadow(-1px -1px 1px #666);
+  vertical-align:middle;
+  
   h1 {
-    font-size:200%;
+    font-size:180%;
+    line-height:100%;
     float:left;
   }
 
   #search {
     float:right;
     font-size:120%;
+    line-height:100%;
+    vertical-align:middle;
+    
+    label {
+      margin-right:1em;
+    }
+    input {
+      width:10em;
+      margin-right:1em;
+      vertical-align:middle;
+    }
+    button {
+      .border-radius (5px);
+      .v-gradient (#BBB, 0%, #666, 100%);
+      background-color:#333;
+      color:#fff;
+      text-decoration:none;
+      padding:0.25em 0.5em;
+      margin:0;
+      border:1px solid #000;
+      display:inline-block;
+      .text-shadow(-1px -1px 1px #666);
+      vertical-align:middle;
+    }
   }
 }
 
@@ -100,51 +143,77 @@ body {
   bottom:0;
   left:0;
   right:@menu_width;
+  border:1px solid #000;
 }
 #routes {
   position:absolute;
   top:0;
   bottom:0;
   right:0;
-  width:@menu_width;
-  background:#333;
-
-  #routes-menu {
-    height:2em;
+  padding:1em 2px 2px 1em;
+  width:@menu_width - 1em;
+  background-color:#333;
+  .h-gradient(#999,0%,#333,1em);
+  .box-shadow(0 0 10px rgba(0,0,0,0.25));
+  border-left:1px solid #000;
     
-    a {
-      .border-radius (5px);
-      .v-gradient (#AAA, 0%, #333, 100%);
-      background-color:#333;
-      color:#fff;
-      text-decoration:none;
-      padding:0.25em 0.5em;
-      margin:0;
-      border:1px solid #000;
-      display:block;
+  a.add-route, a.edit-route {
+    .border-radius (5px);
+    .v-gradient (#BBB, 0%, #666, 100%);
+    background-color:#333;
+    color:#fff;
+    text-decoration:none;
+    padding:0.25em 0.5em;
+    margin:0;
+    border:1px solid #000;
+    display:inline-block;
+    .text-shadow(-1px -1px 1px #666);
+  }
+  
+  a.edit-route {
+    float:right;
+  }
+  
+  #routes-select {
+    padding:0.25em;
+    font-size:100%;
+    margin:0 0 0 1em;
+    width:@menu_width - 13em;
+    
+    option {
+      margin:0.25em;
     }
+  }
     
-    a.add-route {
-      float:left;
-      
-      &:after {
-        .clearfix();
-      }
-    }
+  #routes-waypoints {
+    .border-radius (5px);
+    background-color:#DDD;
+    .v-gradient(#EEE,0%,#DDD,100%);
+    .box-shadow(inset 0 0 5px #AAA);
+    color:#FFF;
+    position:absolute;
+    top:4em;
+    left:1em;
+    right:1em;
+    bottom:1em;
+    overflow:auto;
+    border:1px solid #000;
     
-    ul {
+    ul.waypoints {
       list-style-type:none;
       margin:0;
       padding:0;
+      display:none;
       
-      &:after {
-        .clearfix();
+      &.active {
+        display:block;
       }
       
-      li {
-        float:left;
-        margin:0;
+      li.waypoint {
+        margin:0 0 0.5em 0;
         padding:0;
+        .border-radius (5px);
+        background:#666;
       }
     }
   }
